[package]
name = "gnpm-desktop"
version = "1.0.0"
description = "Global Node.js package manager desktop app."
authors = ["hojas"]
license = "MIT"
repository = "git@github.com:hojas/gnpm-desktop.git"
edition = "2023"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["shell-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
